--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-psycopg2-binary = "==2.9.1"
 supervisor = "==4.2.2"
 environs = "==9.3.2"
 Flask = "==2.0.1"
@@ -15,6 +14,8 @@ Flask-Migrate = "==3.1.0"
 Flask-Bcrypt = "==0.7.1"
 Flask-Caching = ">=1.7.2"
 pyjwt = "*"
+gunicorn = "*"
+psycopg2 = "*"
 
 [dev-packages]
 autopep8 = "*"
