--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 FLASK_ENV=development
-DATABASE_URL=sqlite:///database.sqlite
+POSTGRE_DATABASE_URI=sqlite:///database.sqlite
 SECRET_KEY=not-so-secret
 JWT_SECRET=your-jwt-secret
